<resources>
    <string name="app_name">module_6.1</string>
    <string name="text_view">Введите логин и пароль:</string>
    <string name="name_hintMail">Введите E-Mail:</string>
    <string name="name_hintPass">Введите пароль:</string>
    <string name="checkbox">Принимаю соглашения</string>
    <string name="button">Login</string>
    <string name="hello_action">Логин прошел успешно</string>
    <string name="image">Image</string>
    <string name="errorString">%1$s</string>
    <string name="name_hintPhone">Введите телефон</string>
    <string name="List_item">List item</string>
    <string name="List_item1">List item 1</string>
    <string name="List_item2">List item 2</string>
    <string name="List_item3">List item 3</string>
    <string name="List_item4">List item 4</string>
    <string name="List_item5">List item 5</string>
    <string name="List_item6">List item 6</string>
    <string name="List_item7">List item 7</string>


</resources>
